maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:21: error: expected class or object definition
def situation(){
^Escaper:37: error: Unmatched closing brace '}' ignored here
}
^